dotCMS/core#24243 fixed squash between hint icon  and label (#24298)

--- a/dotCMS/src/main/webapp/html/css/dijit-dotcms/dotcms.css
+++ b/dotCMS/src/main/webapp/html/css/dijit-dotcms/dotcms.css
@@ -9698,14 +9698,6 @@ dd .buttonCaption {
   margin-bottom: 24px;
   position: relative;
 }
-.fieldName > a {
-  position: absolute;
-  left: 0;
-  top: -2px;
-}
-.fieldName > a + span + span {
-  padding-left: 20px;
-}
 .fieldName .hintIcon {
   color: #161616;
 }
